# ofchat/swagger/ofchat.json
@@ -69,6 +69,44 @@
                 }
             }
         },
+        "/restapi/v1/ask/upload/{userId}/{fileName}/{fileSize}":{
+            "get":{
+                "consumes":[
+                ],
+                "produces":[
+                ],
+                "parameters":[
+                    {
+                        "type":"string",
+                        "name":"fileName",
+                        "in":"path",
+                        "required":true
+                    },
+                    {
+                        "type":"string",
+                        "name":"fileSize",
+                        "in":"path",
+                        "required":true
+                    },
+                    {
+                        "type":"string",
+                        "name":"userId",
+                        "in":"path",
+                        "required":true
+                    }
+                ],
+                "responses":{
+                    "200":{
+                        "description":"OK",
+                        "headers":{
+                        },
+                        "schema":{
+                            "type":"string"
+                        }
+                    }
+                }
+            }
+        },
         "/restapi/v1/ask/{userId}":{
             "get":{
                 "consumes":[
